# mnemosyne

./: .env.example  .gitignore  GUIDE.md  LICENSE  README.md  activate_workflow.py  check_n8n.py  docker-compose.mac.yml  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  fix_routes.py  generate_key.py  ingest_session.py  merge_blueprints.py  push_workflow.py  pytest_lifecycle_output.txt  pytest_output.txt  test_all_phases.sh  test_ingest.py  test_ingest_codebase.py  test_orchestration.py  test_phase7_e2e.sh  tmp_diff.txt  turboquant_phase2_status.md
.agent/: mories_handover.md  troubleshooting_log.md
dashboard/: api-docs.html  api.html  graph.html  guide.html  harness.html  i18n.js  index.html  maturity.html  memory.html  memory_history.html  nav-component.css  nav-component.js  nginx.conf  orchestration.html  rbac.html  synaptic.html  terminology.html  theme.css  theme.js  workflows.html
docs/: 01_project_overview.md  02_architecture_design.md  03_integration_plan.md  04_api_mapping.md  05_data_sources_design.md  06_reliability_security.md  07_troubleshooting_and_deployment.md  08_project_handover.md  09_harness_operations_guide.md  (+3 more)
mcp_server/: README.md  __init__.py  claude_desktop_config.json  config.py  mcp_config.json  mories_mcp.py  pyproject.toml  server.py  setup.sh  tools.py
mories_sdk/: README.md  pyproject.toml
mories_sdk/examples/: onboarding.py
mories_sdk/mories/: __init__.py  client.py  errors.py  langchain.py
mories_sdk/tests/: __init__.py  conftest.py  test_client.py
n8n/: README.md  (+2 more)
(+9017 files in other folders)
