[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mories-sdk"
version = "0.1.0"
authors = [
  { name="MiroFish Core Team", email="core@mirofish.io" },
]
description = "Internal Python SDK for the Mories Cognitive Engine"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload"
]
dependencies = [
    "httpx>=0.24.1",
]

[project.urls]
"Homepage" = "https://github.com/mirofish/mories-supermemory"
